--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,13 @@ jobs:
         include:
           - os: windows-latest
             output_name: pianoblox.exe
-            artifact_path: dist/*.exe
+            artifact_path: dist/pianoblox.exe
           - os: macos-latest
-            output_name: pianoblox
-            artifact_path: dist/pianoblox
+            output_name: PianoBlox
+            artifact_path: dist/PianoBlox.app
           - os: ubuntu-latest
-            output_name: pianoblox
-            artifact_path: dist/pianoblox
+            output_name: pianoblox-linux
+            artifact_path: dist/pianoblox-linux.AppImage
 
     steps:
       - name: Check out Git repository
@@ -42,6 +42,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install pynput pyinstaller
           
+      - name: Install macOS dependencies
+        if: runner.os == 'macOS'
+        run: |
+          pip install pyinstaller-hooks-contrib
+          
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fuse libfuse2
+          pip install pyinstaller-hooks-contrib
+          wget -q https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage -O appimagetool
+          chmod +x appimagetool
+          
       - name: Create midi directory (Unix)
         if: runner.os != 'Windows'
         run: mkdir -p midi
@@ -53,8 +67,56 @@ jobs:
             mkdir midi
           }
           
-      - name: Build with PyInstaller
-        run: pyinstaller --onefile --name ${{ matrix.output_name }} pianoblox.py
+      - name: Build with PyInstaller (Windows)
+        if: runner.os == 'Windows'
+        run: pyinstaller --onefile --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.ico pianoblox.py
+ 
+      - name: Build with PyInstaller (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          # Create .app bundle
+          pyinstaller --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.icns pianoblox.py
+          
+      - name: Build with PyInstaller (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          # Create basic executable
+          pyinstaller --onefile --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.png pianoblox.py
+          
+          # Create AppDir structure
+          mkdir -p AppDir/usr/bin
+          mkdir -p AppDir/usr/share/applications
+          mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
+          
+          # Copy executable to AppDir
+          cp dist/${{ matrix.output_name }} AppDir/usr/bin/
+          
+          # Copy icon
+          cp assets/icon.png AppDir/usr/share/icons/hicolor/256x256/apps/pianoblox.png
+          
+          # Create desktop file
+          cat > AppDir/usr/share/applications/pianoblox.desktop << EOF
+          [Desktop Entry]
+          Type=Application
+          Name=PianoBlox
+          Exec=pianoblox-linux
+          Icon=pianoblox
+          Categories=AudioVideo;Audio;Music;
+          EOF
+          
+          # Create AppRun file
+          cat > AppDir/AppRun << EOF
+          #!/bin/bash
+          SELF=\$(readlink -f "\$0")
+          HERE=\${SELF%/*}
+          export PATH="\${HERE}/usr/bin:\${PATH}"
+          "\${HERE}/usr/bin/${{ matrix.output_name }}" "\$@"
+          EOF
+          
+          chmod +x AppDir/AppRun
+          
+          # Generate AppImage
+          ./appimagetool AppDir dist/${{ matrix.output_name }}.AppImage
           
       - name: Upload Windows Artifacts
         if: matrix.os == 'windows-latest'
@@ -68,14 +130,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: macos-artifacts
-          path: dist/pianoblox
+          path: dist/*.app
 
       - name: Upload Linux Artifacts
         if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
           name: linux-artifacts
-          path: dist/pianoblox
+          path: dist/*.AppImage
 
   publish:
     needs: release
