--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pynput pyinstaller
+          pip install pynput pyinstaller appdirs
           
       - name: Install macOS dependencies
         if: runner.os == 'macOS'
