Update build workflow to improve macOS packaging by adding an OS X bundle identifier and changing the build method to 'onedir'. Ensure consistency across Windows and Linux build commands.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,19 +69,19 @@ jobs:
           
       - name: Build with PyInstaller (Windows)
         if: runner.os == 'Windows'
-        run: pyinstaller --onefile --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.ico pianoblox.py
+        run: pyinstaller --onefile --windowed --name ${{ matrix.output_name }} --icon=assets/icon.ico pianoblox.py
  
       - name: Build with PyInstaller (macOS)
         if: runner.os == 'macOS'
         run: |
           # Create .app bundle
-          pyinstaller --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.icns pianoblox.py
+          pyinstaller --onedir --windowed --name ${{ matrix.output_name }} --icon=assets/icon.icns --osx-bundle-identifier="com.pianoblox.app" pianoblox.py
           
       - name: Build with PyInstaller (Linux)
         if: runner.os == 'Linux'
         run: |
           # Create basic executable
-          pyinstaller --onefile --windowed --noconsole --name ${{ matrix.output_name }} --icon=assets/icon.png pianoblox.py
+          pyinstaller --onefile --windowed --name ${{ matrix.output_name }} --icon=assets/icon.png pianoblox.py
           
           # Create AppDir structure
           mkdir -p AppDir/usr/bin
